# SAGE

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.claude/: settings.json
.claude/hooks/: capture-declared-risk.sh  generated-artifact-write-guard.sh  post-tool-logger.sh  pre-implementation-gate.sh  pre-phase4-checklist-gate.sh  stop-compliance-report.sh
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  ARTIFACTS.md
docs/sage_harness/: .manifest.json  README.md  manifest.example.json
plan_docs/: 7th-prep-batch2-cross-model.md  F9-pdca-phase-enforcement.md  acceptance-evidence-hardening-plan.md  conversational-profile-authoring-plan.md  enhancement-backlog.md  external-review-hardening-plan.md  fb23-implementation-plan.md  fb23-overlay-reclassification-plan.md  gate-audit-enforcement-plan.md  loop-engineering-plan.md  loop-gate-enforcement-plan.md  mcp-asset-kind-plan.md  overlay-composition-plan.md  sage-team-plan.md  w3-codex-enforce-brief.md
plan_docs/00-base_plan/: sage-fb-01-11-cycle-evidence-binding.md  sage-fb-02-risk-acceptance-waiver.md  sage-fb-03-manual-double-host.md  sage-fb-04-host-model-routing.md  sage-fb-05-codex-skill-scope.md  sage-fb-06-context-snapshot-restore.md  sage-fb-07-l0-domain-risk-exception.md  sage-fb-08-server-authority-attestation.md  sage-fb-09-delivery-required-check.md  sage-fb-10-codex-rename-risk.md  sage-fb-12-framework-overlay-hard-fail.md  sage-fb-13-raw-profile-types.md  sage-fb-14-install-core-trust-anchor.md  sage-fb-15-install-atomicity.md  sage-fb25-project-routing-block.md  sage-profile-layering.md  sage-same-runtime-headless-review.md  sage-version-contract.md
plan_docs/01-plan/: sage-fb-01-11-cycle-evidence-binding.md  sage-fb-02-risk-acceptance-waiver.md  sage-fb-03-manual-double-host.md  sage-fb-04-host-model-routing.md  sage-fb-05-codex-skill-scope.md  sage-fb-06-context-snapshot-restore.md  sage-fb-07-l0-domain-risk-exception.md  sage-fb-08-server-authority-attestation.md  sage-fb-09-delivery-required-check.md  sage-fb-10-codex-rename-risk.md  sage-fb-12-framework-overlay-hard-fail.md  sage-fb-13-raw-profile-types.md  sage-fb-14-install-core-trust-anchor.md  sage-fb-15-install-atomicity.md  sage-profile-layering.md  sage-same-runtime-headless-review.md  sage-version-contract.md
plan_docs/02-design/: sage-fb-01-11-cycle-evidence-binding.md  sage-fb-02-risk-acceptance-waiver.md  sage-fb-03-manual-double-host.md  sage-fb-04-host-model-routing.md  sage-fb-05-codex-skill-scope.md  sage-fb-06-context-snapshot-restore.md  sage-fb-07-l0-domain-risk-exception.md  sage-fb-08-server-authority-attestation.md  sage-fb-09-delivery-required-check.md  sage-fb-10-codex-rename-risk.md  sage-fb-12-framework-overlay-hard-fail.md  sage-fb-13-raw-profile-types.md  sage-fb-14-install-core-trust-anchor.md  sage-fb-15-install-atomicity.md  sage-profile-layering.md  sage-same-runtime-headless-review.md  sage-version-contract.md
plan_docs/03-implementation/: sage-fb-01-11-cycle-evidence-binding.md  sage-fb-02-risk-acceptance-waiver.md  sage-fb-03-manual-double-host.md  sage-fb-04-host-model-routing.md  sage-fb-05-codex-skill-scope.md  sage-fb-06-context-snapshot-restore.md  sage-fb-07-l0-domain-risk-exception.md  sage-fb-08-server-authority-attestation.md  sage-fb-09-delivery-required-check.md  (+5 more)
sage/: __init__.py  __main__.py  _resources.py  asset_paths.py  build_identity.py  ci_authority.py  cli.py  context_packet.py  hook_entry.py  hook_runtime_hash.py  install_transaction.py  manifest_io.py  mcp_common.py  model_catalog.py  model_routing.py  overlay_classify.py  overlay_common.py  overlay_lint.py  overlay_materialize.py  profile_compile.py  profile_layers.py  profile_validate.py  routing_block.py  runtime_hosts.py  version_contract.py
sage/commands/: __init__.py  (+19 more)
schema/: manifest.schema.json  profile.local.schema.json  profile.schema.json
templates/: agent.spec.md  claims.yml  hook.spec.md  project-profile.yaml  skill.spec.md
(+247 files in other folders)
