[project]
name = "sage-harness"
version = "0.1.0"
description = "System for Agentic Governance & Engineering — runtime-selectable AI harness framework"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
schema = ["jsonschema>=4.0"]   # sage validate --schema (manifest JSON Schema 구조검증)

[project.scripts]
sage = "sage.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sage*"]

# 번들 리소스(templates/·schema/·scripts/sage_harness/·docs/sage_harness/)는 sage 패키지 밖에 있고
# install 이 대상 프로젝트로 복사한다. sdist 는 MANIFEST.in 으로 포함. **wheel 은 setup.py 의
# BundleResources(build_py)가 빌드 시 sage/_bundle/ 로 복사**해 순수 wheel 단독 배포가 동작(P2-10).
# 런타임 해석은 sage/_resources.py: $SAGE_RESOURCE_ROOT > sage/_bundle(wheel) > repo fallback(clone/editable).
[tool.setuptools]
include-package-data = true
