[project]
name = "sage-harness"
version = "0.9.66"
description = "Governance harness for AI coding agents — spec-SSOT closed loop for Claude Code and Codex"
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
authors = [{ name = "SeJonJ", email = "wkdtpwhs@gmail.com" }]
requires-python = ">=3.10"
keywords = [
  "ai", "agent", "governance", "claude", "codex", "harness",
  "hooks", "spec", "ssot", "llm", "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
]
dependencies = [
  "pyyaml>=6.0",
  "tomli>=2.0; python_version < '3.11'",   # MCP generate: config.toml 검증(py3.11+ 는 표준 tomllib). 없으면 best-effort skip
]

[project.optional-dependencies]
schema = ["jsonschema>=4.0"]   # sage validate --schema (manifest JSON Schema 구조검증)

[project.urls]
Homepage = "https://github.com/SeJonJ/SAGE"
Repository = "https://github.com/SeJonJ/SAGE"
Issues = "https://github.com/SeJonJ/SAGE/issues"
Changelog = "https://github.com/SeJonJ/SAGE/releases"

[project.scripts]
sage = "sage.cli:main"
sage-hook = "sage.hook_entry:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sage*"]

# 번들 리소스(templates/·schema/·scripts/sage_harness/·docs/sage_harness/)는 sage 패키지 밖에 있고
# install 이 대상 프로젝트로 복사한다. sdist 는 MANIFEST.in 으로 포함. **wheel 은 setup.py 의
# BundleResources(build_py)가 빌드 시 sage/_bundle/ 로 복사**해 순수 wheel 단독 배포가 동작(P2-10).
# 런타임 해석은 sage/_resources.py: $SAGE_RESOURCE_ROOT > sage/_bundle(wheel) > repo fallback(clone/editable).
[tool.setuptools]
include-package-data = true
